header content and styling

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Ecommerce - shopping cart</title>
     <!--link style-->
     <link rel="stylesheet" href="css/style.css" />
-    <!--boxicons-->
+    <!--iconscout-->
     <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
     <!-- font-->
     <link
@@ -18,5 +18,15 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <!--headr-->
+    <header>
+      <!--nav-->
+      <div class="nav container">
+        <a href="" class="logo">MccGrey</a>
+        <!--cart-->
+        <i class="uil uil-shopping-bag" id="cart-icon"></i>
+      </div>
+    </header>
+  </body>
 </html>
