add section content

--- a/index.html
+++ b/index.html
@@ -28,5 +28,84 @@
         <i class="uil uil-shopping-bag" id="cart-icon"></i>
       </div>
     </header>
+    <!-- shopping-->
+    <section class="shop container">
+      <div class="section-title">Shop Products</div>
+      <!--content-->
+      <div class="shop-content">
+        <div class="product-box">
+          <img src="/accests/new-balance-330.webp" alt="" />
+          <h2 class="product-title">New Balance 330</h2>
+          <span class="price">$350</span>
+          <i class="uil uil-shopping-bag add-cart"></i>
+        </div>
+        <div class="product-box">
+          <img src="/accests/new-balance-530.webp" alt="" />
+          <h2 class="product-title">New Balance 530</h2>
+          <span class="price">$270</span>
+          <i class="uil uil-shopping-bag add-cart"></i>
+        </div>
+        <div class="product-box">
+          <img src="/accests/new-balance-evil.webp" alt="" />
+          <h2 class="product-title">New Balance Evil</h2>
+          <span class="price">$650</span>
+          <i class="uil uil-shopping-bag add-cart"></i>
+        </div>
+        <div class="product-box">
+          <img src="/accests/new-balance-father.jpg" alt="" />
+          <h2 class="product-title">New Balance Father</h2>
+          <span class="price">$330</span>
+          <i class="uil uil-shopping-bag add-cart"></i>
+        </div>
+        <div class="product-box">
+          <img src="/accests/new-balance-fresh.webp" alt="" />
+          <h2 class="product-title">New Balance Freash</h2>
+          <span class="price">$350</span>
+          <i class="uil uil-shopping-bag add-cart"></i>
+        </div>
+        <div class="product-box">
+          <img src="/accests/new-balance-kobe-dunks.webp" alt="" />
+          <h2 class="product-title">New Balance Kobe-Dunks</h2>
+          <span class="price">$1000</span>
+          <i class="uil uil-shopping-bag add-cart"></i>
+        </div>
+        <div class="product-box">
+          <img src="/accests//new-balance-mist.webp" alt="" />
+          <h2 class="product-title">New Balance Mist</h2>
+          <span class="price">$350</span>
+          <i class="uil uil-shopping-bag add-cart"></i>
+        </div>
+        <div class="product-box">
+          <img src="/accests/new-balance-olive.webp" alt="" />
+          <h2 class="product-title">New Balance Olive</h2>
+          <span class="price">$550</span>
+          <i class="uil uil-shopping-bag add-cart"></i>
+        </div>
+        <div class="product-box">
+          <img src="/accests/new-balance-orange.webp" alt="" />
+          <h2 class="product-title">New Balance Orange</h2>
+          <span class="price">$520</span>
+          <i class="uil uil-shopping-bag add-cart"></i>
+        </div>
+        <div class="product-box">
+          <img src="/accests/new-balance-paper-weigth.webp" alt="" />
+          <h2 class="product-title">New Balance PaperWeight-</h2>
+          <span class="price">$350</span>
+          <i class="uil uil-shopping-bag add-cart"></i>
+        </div>
+        <div class="product-box">
+          <img src="/accests/new-balance-thicc650.webp" alt="" />
+          <h2 class="product-title">New Balance Thicc650</h2>
+          <span class="price">$750</span>
+          <i class="uil uil-shopping-bag add-cart"></i>
+        </div>
+        <div class="product-box">
+          <img src="/accests/off-white.webp" alt="" />
+          <h2 class="product-title">Off White Slides</h2>
+          <span class="price">$2500</span>
+          <i class="uil uil-shopping-bag add-cart"></i>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
