add cart order enviroment

--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
       <!--nav-->
       <div class="nav container">
         <a href="" class="logo">MccGrey</a>
-        <!--cart-->
+        <!--cart icon-->
         <i class="uil uil-shopping-bag" id="cart-icon"></i>
+        <!--cart-->
+        <div class="cart">
+          <h2 class="cart-title">Your Cart</h2>
+        </div>
       </div>
     </header>
     <!-- shopping-->
@@ -34,73 +38,121 @@
       <!--content-->
       <div class="shop-content">
         <div class="product-box">
-          <img src="/accests/new balance core.webp" alt="" />
+          <img
+            src="/accests/new balance core.webp"
+            alt=""
+            class="product-img"
+          />
           <h2 class="product-title">New Balance Core</h2>
           <span class="price">$350</span>
           <i class="uil uil-shopping-bag add-cart"></i>
         </div>
         <div class="product-box">
-          <img src="/accests/new balance core.webp" alt="" />
+          <img
+            src="/accests/new balance core.webp"
+            alt=""
+            class="product-img"
+          />
           <h2 class="product-title">New Balance 530</h2>
           <span class="price">$270</span>
           <i class="uil uil-shopping-bag add-cart"></i>
         </div>
         <div class="product-box">
-          <img src="/accests/new balance core.webp" alt="" />
+          <img
+            src="/accests/new balance core.webp"
+            alt=""
+            class="product-img"
+          />
           <h2 class="product-title">New Balance Evil</h2>
           <span class="price">$650</span>
           <i class="uil uil-shopping-bag add-cart"></i>
         </div>
         <div class="product-box">
-          <img src="/accests/new balance core.webp" alt="" />
+          <img
+            src="/accests/new balance core.webp"
+            alt=""
+            class="product-img"
+          />
           <h2 class="product-title">New Balance Father</h2>
           <span class="price">$330</span>
           <i class="uil uil-shopping-bag add-cart"></i>
         </div>
         <div class="product-box">
-          <img src="/accests/new balance core.webp" alt="" />
+          <img
+            src="/accests/new balance core.webp"
+            alt=""
+            class="product-img"
+          />
           <h2 class="product-title">New Balance Freash</h2>
           <span class="price">$350</span>
           <i class="uil uil-shopping-bag add-cart"></i>
         </div>
         <div class="product-box">
-          <img src="/accests/new balance core.webp" alt="" />
-          <h2 class="product-title">New Balance Kobe-Dunks</h2>
+          <img
+            src="/accests/new balance core.webp"
+            alt=""
+            class="product-img"
+          />
+          <h2 class="product-title">New Kobe-Dunks</h2>
           <span class="price">$1000</span>
           <i class="uil uil-shopping-bag add-cart"></i>
         </div>
         <div class="product-box">
-          <img src="/accests/new balance core.webp" alt="" />
+          <img
+            src="/accests/new balance core.webp"
+            alt=""
+            class="product-img"
+          />
           <h2 class="product-title">New Balance Mist</h2>
           <span class="price">$350</span>
           <i class="uil uil-shopping-bag add-cart"></i>
         </div>
         <div class="product-box">
-          <img src="/accests/new balance core.webp" alt="" />
+          <img
+            src="/accests/new balance core.webp"
+            alt=""
+            class="product-img"
+          />
           <h2 class="product-title">New Balance Olive</h2>
           <span class="price">$550</span>
           <i class="uil uil-shopping-bag add-cart"></i>
         </div>
         <div class="product-box">
-          <img src="/accests/new balance core.webp" alt="" />
+          <img
+            src="/accests/new balance core.webp"
+            alt=""
+            class="product-img"
+          />
           <h2 class="product-title">New Balance Orange</h2>
           <span class="price">$520</span>
           <i class="uil uil-shopping-bag add-cart"></i>
         </div>
         <div class="product-box">
-          <img src="/accests/new balance core.webp" alt="" />
-          <h2 class="product-title">New Balance PaperWeight-</h2>
+          <img
+            src="/accests/new balance core.webp"
+            alt=""
+            class="product-img"
+          />
+          <h2 class="product-title">New Balance Paper</h2>
           <span class="price">$350</span>
           <i class="uil uil-shopping-bag add-cart"></i>
         </div>
         <div class="product-box">
-          <img src="/accests/new balance core.webp" alt="" />
-          <h2 class="product-title">New Balance Thicc650</h2>
+          <img
+            src="/accests/new balance core.webp"
+            alt=""
+            class="product-img"
+          />
+          <h2 class="product-title">New Balance Thicc65</h2>
           <span class="price">$750</span>
           <i class="uil uil-shopping-bag add-cart"></i>
         </div>
         <div class="product-box">
-          <img src="/accests/new balance core.webp" alt="" />
+          <img
+            src="/accests/new balance core.webp"
+            alt=""
+            class="product-img"
+          />
           <h2 class="product-title">Off White Slides</h2>
           <span class="price">$2500</span>
           <i class="uil uil-shopping-bag add-cart"></i>
