--- a/index.html
+++ b/index.html
@@ -29,6 +29,32 @@
         <!--cart-->
         <div class="cart">
           <h2 class="cart-title">Your Cart</h2>
+          <!-- cart content-->
+          <div class="cart-content">
+            <div class="cart-box">
+              <img
+                src="/accests/new balance core.webp"
+                alt=""
+                class="cart-img"
+              />
+              <div class="detail-box">
+                <div class="cart-product-title">Core Bounce</div>
+                <div class="cart-price">$350</div>
+                <input type="number" value="1" class="cart-quantity" />
+              </div>
+              <!--remover-->
+              <i class="uil uil-trash-alt cart-remove"></i>
+            </div>
+          </div>
+          <!--total-->
+          <div class="total">
+            <div class="total-title">Total</div>
+            <div class="total-price">$50</div>
+          </div>
+          <!--buy button-->
+          <button type="button" class="btn-buy">Buy Now</button>
+          <!-- Cart Close-->
+          <i class="uil uil-times" id="close-cart"></i>
         </div>
       </div>
     </header>
