add functioality to open and close cart button

--- a/index.html
+++ b/index.html
@@ -185,5 +185,8 @@
         </div>
       </div>
     </section>
+
+    <!-- link to js-->
+    <script src="js/main.js"></script>
   </body>
 </html>
