--- a/index.html
+++ b/index.html
@@ -59,28 +59,20 @@
           <i class="uil uil-shopping-bag add-cart"></i>
         </div>
         <div class="product-box">
-          <img
-            src="/accests/new balance core.webp"
-            alt=""
-            class="product-img"
-          />
+          <img src="/accests/new-balance-330.webp" alt="" class="product-img" />
           <h2 class="product-title">New Balance 530</h2>
           <span class="price">$270</span>
           <i class="uil uil-shopping-bag add-cart"></i>
         </div>
         <div class="product-box">
-          <img
-            src="/accests/new balance core.webp"
-            alt=""
-            class="product-img"
-          />
+          <img src="/accests/new-balance-530.webp" alt="" class="product-img" />
           <h2 class="product-title">New Balance Evil</h2>
           <span class="price">$650</span>
           <i class="uil uil-shopping-bag add-cart"></i>
         </div>
         <div class="product-box">
           <img
-            src="/accests/new balance core.webp"
+            src="/accests/new-balance-evil.webp"
             alt=""
             class="product-img"
           />
@@ -90,7 +82,7 @@
         </div>
         <div class="product-box">
           <img
-            src="/accests/new balance core.webp"
+            src="/accests/new-balance-father.jpg"
             alt=""
             class="product-img"
           />
@@ -100,7 +92,7 @@
         </div>
         <div class="product-box">
           <img
-            src="/accests/new balance core.webp"
+            src="/accests/new-balance-fresh.webp"
             alt=""
             class="product-img"
           />
@@ -110,7 +102,7 @@
         </div>
         <div class="product-box">
           <img
-            src="/accests/new balance core.webp"
+            src="/accests/new-balance-kobe-dunks.webp"
             alt=""
             class="product-img"
           />
@@ -120,7 +112,7 @@
         </div>
         <div class="product-box">
           <img
-            src="/accests/new balance core.webp"
+            src="/accests/new-balance-mist.webp"
             alt=""
             class="product-img"
           />
@@ -130,7 +122,7 @@
         </div>
         <div class="product-box">
           <img
-            src="/accests/new balance core.webp"
+            src="/accests/new-balance-olive.webp"
             alt=""
             class="product-img"
           />
@@ -140,7 +132,7 @@
         </div>
         <div class="product-box">
           <img
-            src="/accests/new balance core.webp"
+            src="/accests/new-balance-orange.webp"
             alt=""
             class="product-img"
           />
@@ -150,7 +142,7 @@
         </div>
         <div class="product-box">
           <img
-            src="/accests/new balance core.webp"
+            src="/accests/new-balance-paper-weigth.webp"
             alt=""
             class="product-img"
           />
@@ -160,7 +152,7 @@
         </div>
         <div class="product-box">
           <img
-            src="/accests/new balance core.webp"
+            src="/accests/new-balance-thicc650.webp"
             alt=""
             class="product-img"
           />
