add a search bar and style

--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
     <header>
       <!--nav-->
       <div class="nav container">
-        <a href="" class="logo">MccGrey</a>
+        <a href="" class="logo">MccGrey-kicks</a>
+        <!--search box-->
+        <form>
+          <i class="uil uil-search"></i>
+          <input
+            type="text"
+            name=""
+            id="search-item"
+            placeholder="search product"
+          />
+        </form>
+
         <!--cart icon-->
         <i class="uil uil-shopping-bag" id="cart-icon"></i>
         <!--cart-->
